--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,24 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "axios": "^0.19.0",
     "babel-preset-react": "^6.24.1",
     "history": "^4.7.2",
     "i18next": "^15.0.4",
     "prop-types": "^15.7.2",
     "query-string": "^6.3.0",
-    "react": "^16.2.0",
+    "react": "^16.8.6",
     "react-cookie": "^3.0.8",
     "react-device-detect": "^1.6.2",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.8.6",
     "react-i18next": "^10.1.1",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.17",
     "redux": "^4.0.1",
-    "redux-auth-wrapper": "^2.1.0",
-    "redux-thunk": "^2.3.0",
-    "whatwg-fetch": "^3.0.0"
+    "redux-saga": "^1.0.5",
+    "rxjs": "^6.5.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
